--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "node": "^21.2.0",
     "react": "^18",
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.3",
