--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "node": "^21.2.0",
+    "npm": "^10.2.5",
     "react": "^18",
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.3",
