--- a/package.json
+++ b/package.json
@@ -9,30 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.17",
+    "@paypal/react-paypal-js": "^7.8.3",
     "@sendgrid/mail": "^8.1.0",
-    "@types/bcryptjs": "^2.4.6",
-    "axios": "^1.6.3",
+    "@swc/helpers": "^0.5.3",
+    "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
-    "mongoose": "^8.0.3",
-    "next": "^14.0.4",
-    "next-auth": "^4.24.5",
+    "chart.js": "^4.2.1",
+    "cloudinary": "^1.35.0",
+    "js-cookie": "^3.0.1",
+    "mongoose": "^7.0.3",
+    "next": "13.3.0",
+    "next-auth": "^4.22.0",
     "next-themes": "^0.2.1",
-    "node": "^21.2.0",
-    "npm": "^10.2.5",
-    "react": "^18",
-    "react-dom": "^18.2.0",
-    "react-toastify": "^9.1.3",
-    "vercel": "^33.0.1"
+    "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.1.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "@types/react": "^18.0.34",
+    "autoprefixer": "^10.4.14",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
