--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@paypal/react-paypal-js": "^7.8.3",
     "@sendgrid/mail": "^8.1.0",
     "@swc/helpers": "^0.5.3",
+    "@types/bcryptjs": "^2.4.6",
     "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.2.1",
