--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "eslint-config-next": "13.3.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
+  },
+  "resolutions": {
+    "react-countup/countup.js": "2.5.0"
   }
 }
