--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/credential-providers": "^3.484.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
+    "@mongodb-js/zstd": "^1.2.0",
     "@paypal/react-paypal-js": "^7.8.3",
     "@sendgrid/mail": "^8.1.0",
     "@swc/helpers": "^0.5.3",
     "@types/bcryptjs": "^2.4.6",
+    "aws4": "^1.12.0",
     "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.2.1",
     "cloudinary": "^1.35.0",
     "js-cookie": "^3.0.1",
+    "kerberos": "^2.1.0",
+    "mongodb-client-encryption": "^2.9.1",
     "mongoose": "^7.0.3",
     "next": "13.3.0",
     "next-auth": "^4.22.0",
@@ -29,7 +34,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-responsive-carousel": "^3.2.23",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "snappy": "^7.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.34",
